<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_treinos"
            android:title="@string/nav_treinos"
            android:icon="@drawable/ic_disciplina_black"
            android:checked="true"/>

        <item
            android:id="@+id/nav_pagamentos"
            android:title="@string/nav_pagamentos"
            android:icon="@drawable/ic_pgmento"/>
        <item
            android:id="@+id/nav_mensagens"
            android:title="@string/nav_mensagens"
            android:icon="@drawable/ic_chat_black"/>
        <item
            android:id="@+id/nav_turmas"
            android:title="@string/nav_turmas"
            android:icon="@drawable/ic_turmas"/>
        <item
            android:id="@+id/nav_config"
            android:title="@string/action_config"
            android:icon="@drawable/ic_configuracoes_black"/>
    </group>


</menu>